available as SVG.

* Session build progress is now more detailed: percentage and cumulated
timing of running theories is continuously updated, while the finished
state (100%) remains. Long-running commands are displayed as well.

* Update GUI look-and-feel to current FlatLaf 3.6, with native library
support on all Isabelle platforms (now including arm64-linux).

* Mouse event handling is now more reactive: this is especially relevant
for macOS with Magic Mouse.

* GUI rendering of the gutter is now more accurate, using scaled icons
to fit precisely into the available space.

* GUI rendering for dark look-and-feels has been slightly improved:
colors and icons, notably the menu accelerator font/color.

* Additional look-and-feels "FlatLaf macOS Light" and "FlatLaf macOS
Dark" imitate original macOS more closely. This is the default for the
bundled application on macOS.

* Automatic GUI scaling on Linux, based on global GDK_SCALE for Java.
This is only an approximation: an integer factor that applies uniformly
to all displays. In contrast, Windows and macOS work with accurate GUI
scaling for each individual display, based on operating system settings
and FlatLaf defaults.

* The command-line tool "isabelle jedit" now supports option "-o" as in
"isabelle build", but it takes persistent preferences into account. When
options are loaded, command-line options take precedence. When options
are saved, command-line options are ignored, but original preferences
take precedence. Example:

  isabelle jedit -o threads=1

This runs Isabelle/jEdit with sequential evaluation in ML, without
affecting stored preferences of option "threads".


*** Isabelle/VSCode Prover IDE ***

* The command-line tool "isabelle vscode" builds its underlying logic
session before starting the VSCodium editor and its Isabelle language
server. Thus build progress, errors, and interrupts work more robustly
via the regular console.

* The command-line tool "isabelle vscode" supports new options -D and -J