@@ -9,8 +9,11 @@ package isabelle.jedit
 
 import isabelle._
 
-import org.gjt.sp.jedit.{EditPane, EditPaneMouseHandlerFactory}
-import org.gjt.sp.jedit.textarea.{MouseHandler => JEditMouseHandler, TextAreaMouseHandler}
+import java.awt.event.{MouseAdapter, MouseEvent}
+
+import org.gjt.sp.jedit.{EditPane, EditPaneMouseHandlerFactory, Buffer}
+import org.gjt.sp.jedit.textarea.{MouseHandler => JEditMouseHandler, TextAreaMouseHandler,
+  JEditTextArea}
 
 
 object JEdit_Mouse_Handler {
@@ -18,6 +21,35 @@ object JEdit_Mouse_Handler {
     override def create(edit_pane: EditPane): TextAreaMouseHandler =
       new JEdit_Mouse_Handler(edit_pane)
   }
+
+  def jump_delay(options: Options): Time = options.seconds("editor_jump_delay")
+  lazy val jump_delay0: Time = jump_delay(Options.init0())
+
+  def jump_delay(): Time =
+    PIDE.get_plugin match {
+      case Some(plugin) => jump_delay(PIDE.plugin.options.value)
+      case None => jump_delay0
+    }
+
+  def jump(edit_pane: EditPane): Unit =
+    if (edit_pane != null) {
+      val text_area = edit_pane.getTextArea
+      if (text_area != null) {
+        Untyped.get[MouseAdapter](text_area, "mouseHandler") match {
+          case mouse_handler: JEdit_Mouse_Handler => mouse_handler.jump()
+          case _ =>
+        }
+      }
+    }
 }
 
-class JEdit_Mouse_Handler(edit_pane: EditPane) extends JEditMouseHandler(edit_pane.getTextArea)
+class JEdit_Mouse_Handler(edit_pane: EditPane) extends JEditMouseHandler(edit_pane.getTextArea) {
+  private var after_jump = false
+  private val delay_jump =
+    Delay.last(JEdit_Mouse_Handler.jump_delay(), gui = true) { after_jump = false }
+
+  def jump(): Unit = { after_jump = true; delay_jump.invoke() }
+
+  override def mouseDragged(evt: MouseEvent): Unit =
+    if (!after_jump) super.mouseDragged(evt)
+}
